Added metadata to Content for keeping score and embeddingId of EmbeddingMatch